[package]
name = "min-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
env_logger = "0.9.0"
log = "0.4.17"
mini-redis = "0.4.1"
tokio = { version = "1.21.1", features = ["full"] }
